--- a/css/style.css
+++ b/css/style.css
@@ -499,380 +499,83 @@ html.has-scroll-dragging {
   flex: 0;
   -ms-flex-preferred-size: 0%;
   flex-basis: 0%;
-  -webkit-transition: flex-basis 0.1s linear;
-  -webkit-transition: -webkit-flex-basis 0.1s linear;
-  transition: -webkit-flex-basis 0.1s linear;
-  transition: flex-basis 0.1s linear;
+  -webkit-transition: flex-basis 0.1s linear, -webkit-flex-basis 0.1s linear, -ms-flex-preferred-size 0.1s linear;
   transition: flex-basis 0.1s linear, -webkit-flex-basis 0.1s linear, -ms-flex-preferred-size 0.1s linear;
   z-index: 2;
 }
 
 .header__burger {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  gap: 20px;
-  background: var(--bg-clr);
+  width: 48px;
+  height: 48px;
+  padding: 0;
+  overflow: hidden;
+  position: relative;
+  background: transparent;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+.header__burger span {
+  display: block;
+  position: absolute;
+  height: 1px;
+  width: 50%;
+  background: var(--text-clr);
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+  overflow: hidden;
+}
+.header__burger.active span {
+  background: var(--purple);
+}
+.header__burger span:nth-child(even) {
+  left: 50%;
+  border-radius: 0;
+}
+.header__burger span:nth-child(odd) {
+  left: 0;
+  border-radius: 0;
+}
+.header__burger span:nth-child(1),
+.header__burger span:nth-child(2) {
+  bottom: 28px;
+}
+.header__burger span:nth-child(3),
+.header__burger span:nth-child(4) {
+  bottom: 18px;
+}
+.header__burger.active span:nth-child(1),
+.header__burger.active span:nth-child(4) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.header__burger.active span:nth-child(2),
+.header__burger.active span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.header__burger.active span:nth-child(1) {
+  left: 3.5px;
+  bottom: 30px;
+}
+.header__burger.active span:nth-child(2) {
+  left: calc(50% - 3.5px);
+  bottom: 30px;
+}
+.header__burger.active span:nth-child(3) {
+  left: 3.5px;
+  bottom: 13px;
+}
+.header__burger.active span:nth-child(4) {
+  left: calc(50% - 3.5px);
+  bottom: 13px;
 }
 
-.header__burger span:last-child {
-  font-size: 10px;
-  font-weight: 700;
-  -webkit-transition: color 0.3s linear;
-  transition: color 0.3s linear;
-}
-
-.header__burger:hover, .header__burger:focus, .header__burger:active {
-  /* background: var(--bg-clr);
-  border-right: var(--border-1); */
-}
-
-.header__burger:hover svg {
-  /* fill: var(--purple); */
-}
-
-.header__burger svg {
-  width: 25px;
-  height: 25px;
-  /* -webkit-transform: rotate(-360deg);
-  -moz-transform: rotate(-360deg);
-  -ms-transform: rotate(-360deg);
-  -o-transform: rotate(-360deg);
-  transform: rotate(-360deg);
-  -webkit-transition: -webkit-transform 0.3s, fill 0.3s linear;
-  -moz-transition: -moz-transform 0.3s, fill 0.3s linear;
-  -ms-transition: -ms-transform 0.3s, fill 0.3s linear;
-  -o-transition: -o-transform 0.3s, fill 0.3s linear;
-  transition: transform 0.3s, fill 0.3s linear; */
-}
-
-.header__burger.active svg {
-  -webkit-transform: rotate(0);
-  transform: rotate(0);
-  -webkit-transition: -webkit-transform 0.3s, fill 0.3s linear;
-  -webkit-transition: fill 0.3s linear, -webkit-transform 0.3s;
-  transition: fill 0.3s linear, -webkit-transform 0.3s;
-  transition: transform 0.3s, fill 0.3s linear;
-  transition: transform 0.3s, fill 0.3s linear, -webkit-transform 0.3s;
-  -webkit-transition-delay: 0.20s, 0;
-  -moz-transition-delay: 0.20s, 0;
-  -ms-transform-delay: 0.20s, 0;
-  transition-delay: 0.20s, 0;
-}
-
-.header__burger.active:hover circle, .header__burger:hover circle {
-  fill: var(--purple);
-}
-
-.header__burger circle {
-  -webkit-transition: -webkit-transform 0.3s linear, fill 0.3s ease-out;
-  -webkit-transition: fill 0.3s ease-out, -webkit-transform 0.3s linear;
-  transition: fill 0.3s ease-out, -webkit-transform 0.3s linear;
-  transition: transform 0.3s linear, fill 0.3s ease-out;
-  transition: transform 0.3s linear, fill 0.3s ease-out, -webkit-transform 0.3s linear;
-  -webkit-transform: translate(0, 0);
-  transform: translate(0, 0);
-  fill: var(--text-clr);
-}
-
-.header__burger circle:nth-of-type(7), .header__burger.active circle:nth-of-type(7) {
-  fill: var(--purple);
-}
-
-.header__burger.active circle:nth-of-type(1) {
-  -webkit-animation: circle1 0.3s linear;
-  animation: circle1 0.3s linear;
-}
-
-.header__burger.active circle:nth-of-type(2) {
-  -webkit-transform: translate(10px, 0);
-  transform: translate(10px, 0);
-  fill: var(--purple);
-}
-
-.header__burger.active circle:nth-of-type(3) {
-  -webkit-animation: circle3 0.3s linear;
-  animation: circle3 0.3s linear;
-}
-
-.header__burger.active circle:nth-of-type(4) {
-  -webkit-transform: translate(0, 10px);
-  transform: translate(0, 10px);
-  fill: var(--purple);
-}
-
-.header__burger.active circle:nth-of-type(5) {
-  -webkit-animation: circle5 0.3s linear;
-  animation: circle5 0.3s linear;
-}
-
-.header__burger.active circle:nth-of-type(6) {
-  -webkit-transform: translate(-10px, 0);
-  transform: translate(-10px, 0);
-  fill: var(--purple);
-}
-
-.header__burger.active circle:nth-of-type(8) {
-  -webkit-transform: translate(0, -10px);
-  transform: translate(0, -10px);
-  fill: var(--purple);
-}
-
-.header__burger.active circle:nth-of-type(9) {
-  -webkit-animation: circle9 0.3s linear;
-  animation: circle9 0.3s linear;
-}
-
-@-webkit-keyframes circle1 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(10px, -10px);
-    transform: translate(10px, -10px);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes circle1 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(10px, -10px);
-    transform: translate(10px, -10px);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@-webkit-keyframes circle2 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(10px, 0);
-    transform: translate(10px, 0);
-    fill: var(--purple);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes circle2 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(10px, 0);
-    transform: translate(10px, 0);
-    fill: var(--purple);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@-webkit-keyframes circle3 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(10px, 10px);
-    transform: translate(10px, 10px);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes circle3 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(10px, 10px);
-    transform: translate(10px, 10px);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@-webkit-keyframes circle4 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(0, 10px);
-    transform: translate(0, 10px);
-    fill: var(--purple);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes circle4 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(0, 10px);
-    transform: translate(0, 10px);
-    fill: var(--purple);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@-webkit-keyframes circle5 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(-10px, 10px);
-    transform: translate(-10px, 10px);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes circle5 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(-10px, 10px);
-    transform: translate(-10px, 10px);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@-webkit-keyframes circle6 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(-10px, 0);
-    transform: translate(-10px, 0);
-    fill: var(--purple);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes circle6 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(-10px, 0);
-    transform: translate(-10px, 0);
-    fill: var(--purple);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@-webkit-keyframes circle8 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(0, -10px);
-    transform: translate(0, -10px);
-    fill: var(--purple);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes circle8 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(0, -10px);
-    transform: translate(0, -10px);
-    fill: var(--purple);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@-webkit-keyframes circle9 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(-10px, -10px);
-    transform: translate(-10px, -10px);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes circle9 {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(-10px, -10px);
-    transform: translate(-10px, -10px);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
 /* end header */
 
 /* start preloader */
@@ -1008,28 +711,27 @@ html.has-scroll-dragging {
 /* end preloader */
 
 /* start header__nav */
+
 .header__nav {
+  width: 100%;
+  height: calc(100% - 77px);
   position: fixed;
   top: 77px;
   left: 0;
-  z-index: 99;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
-  height: calc(100% - 77px);
   background: var(--bg-clr);
-  -webkit-transform: translateX(-100%);
-  transform: translateX(-100%);
-  -webkit-transition: -webkit-transform 0.3s linear;
-  transition: -webkit-transform 0.3s linear;
-  transition: transform 0.3s linear;
-  transition: transform 0.3s linear, -webkit-transform 0.3s linear;
+  -webkit-transition: -webkit-transform 1.5s cubic-bezier(0.77, 0, 0.175, 1) 0.15s;
+  transition: transform 1.5s cubic-bezier(0.77, 0, 0.175, 1) 0.15s;
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+  z-index: 99;
   overflow: hidden;
+}
+
+.header__nav.active {
+  -webkit-transition: -webkit-transform 1.2s cubic-bezier(0.77, 0, 0.175, 1) 0.15s;
+  transition: transform 1.2s cubic-bezier(0.77, 0, 0.175, 1) 0.15s;
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
 }
 
 .header__nav::-webkit-scrollbar {
@@ -1042,16 +744,6 @@ html.has-scroll-dragging {
   display: none;
   width: 0;
   background: var(--text-clr);
-}
-
-.header__nav.active {
-  visibility: visible;
-  -webkit-transform: translateX(0%);
-  transform: translateX(0%);
-  -webkit-box-shadow: 5px 0 9px 2px rgba(0, 0, 0, 0.37);
-  -ms-box-shadow: 5px 0 9px 2px rgba(0, 0, 0, 0.37);
-  -o-box-shadow: 5px 0 9px 2px rgba(0, 0, 0, 0.37);
-  box-shadow: 5px 0 9px 2px rgba(0, 0, 0, 0.37);
 }
 
 .header__nav_block {
