--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,89 +1,51 @@
-/* Play font */
-@font-face {
-  font-display: swap;
-  font-family: 'Play';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/play/play-400.woff2') format('woff2');
-}
+/* Winston font */
 
 @font-face {
   font-display: swap;
-  font-family: 'Play';
+  font-family: 'Winston';
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/play/play-700.woff2') format('woff2');
+  src: url('../fonts/Winston/Winston-Bold.woff2') format('woff2');
 }
 
-/* Inter font */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: 'Winston';
   font-style: normal;
-  font-weight: 100;
-  src: url('../fonts/inter/inter-100.woff2') format('woff2');
+  font-weight: 700;
+  src: url('../fonts/Winston/Winston-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: 'Winston';
   font-style: normal;
-  font-weight: 200;
-  src: url('../fonts/inter/inter-200.woff2') format('woff2');
+  font-weight: 700;
+  src: url('../fonts/Winston/Winston-Medium.woff2') format('woff2');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: 'Winston';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/Winston/Winston-Regular.woff2') format('woff2');
+}
+
+/* Rubik font */
+
+@font-face {
+  font-display: swap;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/Rubik/Rubik-Regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Rubik';
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/inter/inter-300.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/inter/inter-400.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/inter/inter-500.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
-  src: url('../fonts/inter/inter-600.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/inter/inter-700.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 800;
-  src: url('../fonts/inter/inter-800.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 900;
-  src: url('../fonts/inter/inter-900.woff2') format('woff2');
+  src: url('../fonts/Rubik/Rubik-Light.woff2') format('woff2');
 }
