--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
   --inc-step: 1;
-  --text-font: 'Inter', sans-serif;
-  --title-font: 'Play', sans-serif;
+  --text-font: 'Rubik', sans-serif;
+  --title-font: 'Winston', sans-serif;
   --bg-clr: #f8f8f8;
   --text-clr: #262626;
   --gray-border: #d3d3d3;
