--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,35 +1,39 @@
 /* Winston font */
 
 @font-face {
-  font-display: swap;
   font-family: 'Winston';
+  src: url('../fonts/WinstonWinston-SemiBold.woff2') format('woff2'),
+       url('../fonts/WinstonWinston-SemiBold.woff') format('woff');
+  font-weight: 800;
   font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/Winston/Winston-Bold.woff2') format('woff2');
+  font-display: swap;
 }
 
 @font-face {
-  font-display: swap;
   font-family: 'Winston';
-  font-style: normal;
+  src: url('../fonts/WinstonWinston-Medium.woff2') format('woff2'),
+       url('../fonts/WinstonWinston-Medium.woff') format('woff');
   font-weight: 700;
-  src: url('../fonts/Winston/Winston-SemiBold.woff2') format('woff2');
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-display: swap;
   font-family: 'Winston';
+  src: url('../fonts/WinstonWinston-Bold.woff2') format('woff2'),
+       url('../fonts/WinstonWinston-Bold.woff') format('woff');
+  font-weight: 500;
   font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/Winston/Winston-Medium.woff2') format('woff2');
+  font-display: swap;
 }
 
 @font-face {
-  font-display: swap;
   font-family: 'Winston';
-  font-style: normal;
+  src: url('../fonts/WinstonWinston-Regular.woff2') format('woff2'),
+      url('../fonts/WinstonWinston-Regular.woff') format('woff');
   font-weight: 400;
-  src: url('../fonts/Winston/Winston-Regular.woff2') format('woff2');
+  font-style: normal;
+  font-display: swap;
 }
 
 /* Rubik font */
@@ -39,7 +43,8 @@
   font-family: 'Rubik';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/Rubik/Rubik-Regular.woff2') format('woff2');
+  src: url('../fonts/Rubik/Rubik-Regular.woff2') format('woff2'),
+       url('../fonts/Rubik/Rubik-Regular.woff') format('woff');
 }
 
 @font-face {
@@ -47,5 +52,6 @@
   font-family: 'Rubik';
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/Rubik/Rubik-Light.woff2') format('woff2');
+  src: url('../fonts/Rubik/Rubik-Light.woff2') format('woff2'),
+       url('../fonts/Rubik/Rubik-Light.woff') format('woff');
 }
