--- a/css/style.css
+++ b/css/style.css
@@ -1006,6 +1006,11 @@ html.has-scroll-dragging {
 
 /* start showreel */
 
+.showreel__container {
+  max-width: 1440px;
+  padding: 0;
+}
+
 .showreel__button {
   width: 100%;
 }
@@ -1885,6 +1890,7 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-height: 73.5vh;
   align-items: center;
 }
 
@@ -1928,9 +1934,6 @@ html.has-scroll-dragging {
   display: flex;
   width: 100%;
   padding: 200px 60px 240px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   gap: 30px;
 }
