--- a/css/style.css
+++ b/css/style.css
@@ -1008,17 +1008,13 @@ html.has-scroll-dragging {
 
 .showreel__container {
   max-width: 1440px;
+  height: 500px;
   padding: 0;
+  overflow: hidden;
 }
 
 .showreel__button {
   width: 100%;
-}
-
-.showreel__block {
-  width: 100%;
-  height: 500px;
-  overflow: hidden;
 }
 
 .showreel__block video {
@@ -1896,10 +1892,11 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 190px 0 240px;
   flex-direction: column;
   gap: 25px;
   position: absolute;
-  top: 202px;
+  top: 0;
   left: 10px;
 }
 
